[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/torret.png" type="Texture" id=1]
[ext_resource path="res://scripts/torrets.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="torreta_node" type="Node2D"]

[node name="torrets" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="col" type="CollisionShape2D" parent="torrets"]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="texture" type="Sprite" parent="torrets"]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="tween_move" type="Tween" parent="torrets"]

[node name="tween_escala" type="Tween" parent="torrets"]

[node name="tween_rotation" type="Tween" parent="torrets"]
repeat = true
playback/repeat = true

[node name="atirar_delay" type="Timer" parent="torrets"]
wait_time = 3.0

[connection signal="tween_completed" from="torrets/tween_move" to="torrets" method="_on_tween_move_tween_completed"]
[connection signal="timeout" from="torrets/atirar_delay" to="torrets" method="_on_atirar_delay_timeout"]
